--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             padding: 20px; /* Add padding to prevent edges from disappearing */
             box-sizing: border-box;
             background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
+            font-family: century-gothic, sans-serif;
         }
 
         .flip-card {
