--- a/index.html
+++ b/index.html
@@ -95,5 +95,9 @@
             </div>
         </div>
     </div>
+    <!-- Instructional Text -->
+    <div class="instruction">
+        Click or tap on the card to flip it and reveal the other side.
+    </div>
 </body>
 </html>
