--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <!-- Instructional Text -->
     <div class="instruction">
-        Click or tap on the card to flip it and reveal the other side.
+        Pulsa la tarjeta para desbloquear los detalles
     </div>
 </body>
 </html>
