--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <!-- Instructional Text -->
     <div class="instruction">
-        Pulsa la tarjeta
+        Pulsa en la tarjeta
     </div>
 </body>
 </html>
